@@ -5,7 +5,7 @@ http://www.redips.net/javascript/drag-and-drop-table-content/
 Version 4.5.3
 Oct 16, 2011.
 */
-"use strict";var REDIPS=REDIPS||{};REDIPS.drag=(function(){var init,init_tables,enable_drag,enable_table,img_onmousemove,handler_onmousedown,handler_ondblclick,table_top,handler_onmouseup,handler_onmousemove,element_drop,cell_changed,handler_onresize,set_trc,set_position,set_bgcolor,get_bgcolor,box_offset,calculate_cells,getScrollPosition,autoscrollX,autoscrollY,clone_div,copy_properties,clone_limit,elementControl,get_style,find_parent,save_content,relocate,empty_cell,shift_cells,move_object,animation,get_table_index,get_position,row_opacity,row_empty,row_clone,row_drop,form_elements,normalize,obj_margin=null,window_width=0,window_height=0,scroll_width=null,scroll_height=null,edge={page:{x:0,y:0},div:{x:0,y:0},flag:{x:0,y:0}},scroll_object,bgcolor_old,scrollable_container=[],tables=[],sort_idx,moved,cloned,cloned_id=[],currentCell=[],div_drag=null,div_box=null,pointer={x:0,y:0},shift_key=false,clone_class=false,table=null,table_old=null,table_source=null,row=null,row_old=null,row_source=null,cell=null,cell_old=null,cell_source=null,obj=false,obj_old=false,mode='cell',hover_color='#E7AB83',bound=25,speed=20,only={div:[],cname:'only',other:'deny'},mark={action:'deny',cname:'mark',exception:[]},border='solid',border_disabled='dotted',opacity_disabled,trash_cname='trash',trash_ask=true,trash_ask_row=true,drop_option='multiple',delete_cloned=true,delete_shifted=false,source_cell=null,current_cell=null,previous_cell=null,target_cell=null,animation_pause=20,animation_step=2,animation_shift=false,an_counter=0,clone_shiftKey=false,clone_shiftKey_row=false,row_empty_color='White';init=function(dc){var self=this,i,imgs,redips_clone;if(dc===undefined){dc='drag';}
+"use strict";var REDIPS=REDIPS||{};REDIPS.drag=(function(){var init,init_tables,enable_drag,enable_table,img_onmousemove,handler_onmousedown,handler_ondblclick,table_top,handler_onmouseup,handler_onmousemove,element_drop,cell_changed,handler_onresize,set_trc,set_position,set_bgcolor,get_bgcolor,box_offset,calculate_cells,getScrollPosition,autoscrollX,autoscrollY,clone_div,copy_properties,clone_limit,elementControl,get_style,find_parent,save_content,relocate,empty_cell,shift_cells,move_object,animation,get_table_index,get_position,row_opacity,row_empty,row_clone,row_drop,form_elements,normalize,has_childs,obj_margin=null,window_width=0,window_height=0,scroll_width=null,scroll_height=null,edge={page:{x:0,y:0},div:{x:0,y:0},flag:{x:0,y:0}},scroll_object,bgcolor_old,scrollable_container=[],tables=[],sort_idx,moved,cloned,cloned_id=[],currentCell=[],div_drag=null,div_box=null,pointer={x:0,y:0},shift_key=false,clone_class=false,table=null,table_old=null,table_source=null,row=null,row_old=null,row_source=null,cell=null,cell_old=null,cell_source=null,obj=false,obj_old=false,mode='cell',hover_color='#E7AB83',bound=25,speed=20,only={div:[],cname:'only',other:'deny'},mark={action:'deny',cname:'mark',exception:[]},border='solid',border_disabled='dotted',opacity_disabled,trash_cname='trash',trash_ask=true,trash_ask_row=true,drop_option='multiple',delete_cloned=true,delete_shifted=false,source_cell=null,current_cell=null,previous_cell=null,target_cell=null,animation_pause=20,animation_step=2,animation_shift=false,an_counter=0,clone_shiftKey=false,clone_shiftKey_row=false,row_empty_color='White';init=function(dc){var self=this,i,imgs,redips_clone;if(dc===undefined){dc='drag';}
 div_drag=document.getElementById(dc);if(!document.getElementById('redips_clone')){redips_clone=document.createElement('div');redips_clone.id='redips_clone';redips_clone.style.width=redips_clone.style.height='1px';div_drag.appendChild(redips_clone);}
 enable_drag('init');init_tables();handler_onresize();REDIPS.event.add(window,'resize',handler_onresize);imgs=div_drag.getElementsByTagName('img');for(i=0;i<imgs.length;i++){REDIPS.event.add(imgs[i],'mousemove',img_onmousemove);}
 REDIPS.event.add(window,'scroll',calculate_cells);};img_onmousemove=function(){return false;};init_tables=function(){var i,j,k,element,level,group_idx,tables_nodeList,nested_tables,td,rowspan;tables_nodeList=div_drag.getElementsByTagName('table');for(i=0,j=0;i<tables_nodeList.length;i++){if(tables_nodeList[i].parentNode.id==='redips_clone'||tables_nodeList[i].className.indexOf('nolayout')>-1){continue;}
@@ -77,7 +77,7 @@ else if(REDIPS.drag.drop_option==='overwrite'){empty_cell(target_cell);element_d
 else{element_drop();}
 if(mode==='cell'&&obj.getElementsByTagName('table').length>0){init_tables();}
 calculate_cells();}
-table_old=row_old=cell_old=null;};element_drop=function(){var drop=REDIPS.drag.myhandler_dropped_before(target_cell);if(drop!==false){if(REDIPS.drag.drop_option==='shift'&&target_cell.hasChildNodes()){shift_cells(source_cell,target_cell);}
+table_old=row_old=cell_old=null;};element_drop=function(){var drop=REDIPS.drag.myhandler_dropped_before(target_cell);if(drop!==false){if(REDIPS.drag.drop_option==='shift'&&has_childs(target_cell)){shift_cells(source_cell,target_cell);}
 target_cell.appendChild(obj);REDIPS.drag.myhandler_dropped(target_cell);if(cloned){REDIPS.drag.myhandler_cloned_dropped(target_cell);clone_limit();}}
 else if(cloned){obj.parentNode.removeChild(obj);}};handler_onmousemove=function(e){var evt=e||window.event,bound=REDIPS.drag.bound,sca,X,Y,i,scrollPosition;X=pointer.x=evt.clientX;Y=pointer.y=evt.clientY;if(!moved){if(mode==='cell'&&(clone_class||(REDIPS.drag.clone_shiftKey===true&&shift_key))){REDIPS.drag.obj_old=obj_old=obj;REDIPS.drag.obj=obj=clone_div(obj,true);cloned=true;REDIPS.drag.myhandler_cloned();set_position();}
 else{if(mode==='row'){if(clone_class||(REDIPS.drag.clone_shiftKey_row===true&&shift_key)){cloned=true;}
@@ -195,10 +195,11 @@ return el;};save_content=function(tbl){var query='',tbl_start,tbl_end,tbl_rows,c
 else if(tbl<0||tbl>tables.length-1){tbl_start=tbl_end=0;}
 else{tbl_start=tbl_end=tbl;}
 for(t=tbl_start;t<=tbl_end;t++){tbl_rows=tables[t].rows.length;for(r=0;r<tbl_rows;r++){cells=tables[t].rows[r].cells.length;for(c=0;c<cells;c++){tbl_cell=tables[t].rows[r].cells[c];if(tbl_cell.childNodes.length>0){for(d=0;d<tbl_cell.childNodes.length;d++){if(tbl_cell.childNodes[d].nodeName==='DIV'){query+='p[]='+tbl_cell.childNodes[d].id+'_'+t+'_'+r+'_'+c+'&';}}}}}}
-query=query.substring(0,query.length-1);tables.sort(function(a,b){return b.redips.sort-a.redips.sort;});return query;};relocate=function(from,to,mode){var i,tbl2,cn,move;move=function(el,to){var target=REDIPS.drag.get_position(to);REDIPS.drag.move_object({obj:el,target:target,callback:function(div){var tbl;an_counter--;if(an_counter===0){tbl=REDIPS.drag.find_parent('TABLE',div);REDIPS.drag.enable_table(true,tbl);}}});};if(from===to){return;}
+query=query.substring(0,query.length-1);tables.sort(function(a,b){return b.redips.sort-a.redips.sort;});return query;};relocate=function(from,to,mode){var i,j,tbl2,cn,move;move=function(el,to){var target=REDIPS.drag.get_position(to);REDIPS.drag.move_object({obj:el,target:target,callback:function(div){var tbl;an_counter--;if(an_counter===0){tbl=REDIPS.drag.find_parent('TABLE',div);REDIPS.drag.enable_table(true,tbl);}}});};if(from===to){return;}
 cn=from.childNodes.length;if(mode==='animation'){if(cn>0){tbl2=find_parent('TABLE',to);REDIPS.drag.enable_table(false,tbl2);}
 for(i=0;i<cn;i++){if(from.childNodes[i].nodeType===1&&from.childNodes[i].nodeName==='DIV'){an_counter++;move(from.childNodes[i],to);}}}
-else{for(i=0;i<cn;i++){if(from.childNodes[0].nodeType===1&&from.childNodes[0].nodeName==='DIV'){to.appendChild(from.childNodes[0]);}}}};empty_cell=function(td){var i,cn;if(td.nodeName!=='TD'){return false;}
+else{for(i=0,j=0;i<cn;i++){if(from.childNodes[j].nodeType===1&&from.childNodes[j].nodeName==='DIV'){to.appendChild(from.childNodes[j]);}
+else{j++;}}}};empty_cell=function(td){var i,cn;if(td.nodeName!=='TD'){return false;}
 cn=td.childNodes.length;for(i=0;i<cn;i++){td.removeChild(td.childNodes[0]);}};shift_cells=function(td1,td2){var tbl1,tbl2,pos,pos2,d,c1,c2,cols;tbl1=find_parent('TABLE',td1);tbl2=find_parent('TABLE',td2);cols=tbl2.rows[0].cells.length-1;if(tbl1===tbl2){pos=[td1.parentNode.rowIndex,td1.cellIndex];pos2=[td2.parentNode.rowIndex,td2.cellIndex];if(pos[0]*1000+pos[1]<pos2[0]*1000+pos2[1]){d=1;}
 else{d=-1;}}
 else{d=-1;pos=[tbl2.rows.length-1,cols];pos2=[td2.parentNode.rowIndex,td2.cellIndex];}
@@ -231,7 +232,8 @@ else{if(typeof(ip)==='string'){el=document.getElementById(ip);}
 else{el=ip;}
 el=find_parent('TD',el);if(el&&el.nodeName==='TD'){ci=el.cellIndex;ri=el.parentNode.rowIndex;tbl=find_parent('TABLE',el.parentNode);ti=tbl.redips.idx;arr=[ti,ri,ci];}}
 return arr;};get_table_index=function(idx){var i;for(i=0;i<tables.length;i++){if(tables[i].redips.idx===idx){break;}}
-return i;};normalize=function(str){return str.replace(/^\s+|\s+$/g,'').replace(/\s{2,}/g,' ');};row_opacity=function(el,opacity,color){var td,i,j;if(typeof(el)==='string'){el=document.getElementById(el);el=find_parent('TABLE',el);}
+return i;};normalize=function(str){return str.replace(/^\s+|\s+$/g,'').replace(/\s{2,}/g,' ');};has_childs=function(el){var i;for(i=0;i<el.childNodes.length;i++){if(el.childNodes[i].nodeType===1){return true;}}
+return false;};row_opacity=function(el,opacity,color){var td,i,j;if(typeof(el)==='string'){el=document.getElementById(el);el=find_parent('TABLE',el);}
 if(el.nodeName==='TR'){td=el.getElementsByTagName('td');for(i=0;i<td.length;i++){td[i].style.backgroundColor=color?color:'';if(opacity==='empty'){td[i].innerHTML='';}
 else{for(j=0;j<td[i].childNodes.length;j++){if(td[i].childNodes[j].nodeType===1){td[i].childNodes[j].style.opacity=opacity/100;td[i].childNodes[j].style.filter='alpha(opacity='+opacity+')';}}}}}
 else{el.style.opacity=opacity/100;el.style.filter='alpha(opacity='+opacity+')';}};row_empty=function(tbl_id,row_idx,color){var tbl=document.getElementById(tbl_id),row=tbl.rows[row_idx];if(color===undefined){color=REDIPS.drag.row_empty_color;}
